# tailwind-merge-rs

./: .gitignore  Cargo.toml  README.md  esbuild.js  package.js  package.json
.github/workflows/: rust.yml
src/: lib.rs  package.js  tailwind-merge.js  tailwind_merge.rs
src-js/: esbuild.js  package.json
tests/: arbitary_properties_test.rs  arbitary_values_test.rs  arbitary_variants_test.rs  class_group_conflicts_test.rs  colors_test.rs  conflict_across_class_groups_test.rs  content_utilities_test.rs  important_modifier_test.rs  negative_values_test.rs  non_conflicting_classes_test.rs  non_tailwind_classes_test.rs  output.rs  per_side_border_colors_test.rs  pseudo_variants_test.rs  standalone_classes_test.rs  tailwind_css_versions_test.rs  tailwind_merge_test.rs
